--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "normalize.css": "^8.0.1",
+        "npm": "^6.9.2",
         "skeleton-scss": "^2.0.4"
     }
 }
