--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     },
     "devDependencies": {
         "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "^4.1.2",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "sass": "^1.22.10",
+        "sass-loader": "^7.3.1",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "normalize.css": "^8.0.1",
-        "npm": "^6.9.2",
+        "npm": "^6.11.2",
+        "purecss": "^1.0.1",
         "skeleton-scss": "^2.0.4"
     }
 }
