--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "normalize.css": "^8.0.1",
         "npm": "^6.11.2",
+        "prism-themes": "^1.2.0",
+        "prismjs": "^1.17.1",
         "purecss": "^1.0.1",
         "skeleton-scss": "^2.0.4"
     }
