--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "base16-prism": "^0.2.0",
         "normalize.css": "^8.0.1",
         "npm": "^6.11.2",
         "prism-themes": "^1.2.0",
