Eliminados packages de npm no necesarios
Elimine los siguientes
    normalize.css -> Ya no estaba utilizandolo, lo usaba junto a
    skeleton-scss
    skeleton-scss -> Muy bonito y todo pero ya no lo utilizo tampoco en
    favor a purecss
    prism-themes -> Estoy usando los temas de bas16-prism

Ademas actualize npm a 6.12

--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
     },
     "dependencies": {
         "base16-prism": "^0.2.0",
-        "normalize.css": "^8.0.1",
-        "npm": "^6.11.2",
-        "prism-themes": "^1.2.0",
+        "npm": "^6.12.0",
         "prismjs": "^1.17.1",
-        "purecss": "^1.0.1",
-        "skeleton-scss": "^2.0.4"
+        "purecss": "^1.0.1"
     }
 }
