--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/prism.css": "/css/prism.css"
+    "/js/admin.js": "/js/admin.js?id=634ede2c6c16b7d4ff99",
+    "/js/app.js": "/js/app.js?id=17a7ca520b20b88679c7",
+    "/css/app.css": "/css/app.css?id=33f337856ab01c7673b7",
+    "/css/prism.css": "/css/prism.css?id=bae0df0e96c2ea60a797"
 }
